--- a/Dummy_shopping_app_server/package.json
+++ b/Dummy_shopping_app_server/package.json
@@ -13,9 +13,13 @@
   "dependencies": {
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "hbs": "^4.2.0",
+    "http": "^0.0.1-security",
     "jsonwebtoken": "^9.0.1",
     "mongodb": "^5.7.0",
     "mongoose": "^7.4.2",
-    "nodemon": "^2.0.22"
+    "nodemon": "^2.0.22",
+    "socket.io": "^4.7.2",
+    "soket.io": "^0.0.1-security"
   }
 }
